--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/assets/logo.png">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
